# blend2d

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md  blend2d-config.cmake.in  blend2d-version.py  configure.sh  configure_demos.sh  configure_sanitizers.sh  configure_vs2022_x64.bat  configure_vs2022_x86.bat
.github/: FUNDING.yml
.github/workflows/: build-config.json  build.yml  run-step.py
blend2d/: blend2d-debug.h  blend2d-impl.h  blend2d.h
blend2d-testing/bench/: bl_bench_app.cpp  bl_bench_app.h  bl_bench_backend.cpp  bl_bench_backend.h  bl_bench_backend_agg.cpp  bl_bench_backend_blend2d.cpp  bl_bench_backend_cairo.cpp  bl_bench_backend_coregraphics.cpp  bl_bench_backend_juce.cpp  bl_bench_backend_qt.cpp  bl_bench_backend_skia.cpp  shape_data.cpp  shape_data.h
blend2d-testing/commons/: cmdline.h  imagediff.h  jsonbuilder.cpp  jsonbuilder.h  performance_timer.h
blend2d-testing/demos/: bl_demo_bounces.cpp  bl_demo_bubbles.cpp  bl_demo_circles.cpp  bl_demo_elliptic_arc.cpp  bl_demo_gradients.cpp  bl_demo_image_view.cpp  bl_demo_particles.cpp  bl_demo_paths.cpp  bl_demo_pattern.cpp  bl_demo_rects.cpp  bl_demo_sprites.cpp  bl_demo_stroke.cpp  bl_demo_text.cpp  bl_demo_tiger.cpp  bl_demo_tiger.h  bl_qt_canvas.cpp  bl_qt_canvas.h
blend2d-testing/generator/: bl_generator.cpp
blend2d-testing/samples/: bl_sample_1.cpp  bl_sample_2.cpp  bl_sample_3.cpp  bl_sample_4.cpp  bl_sample_5.cpp  bl_sample_6.cpp  bl_sample_7.cpp  bl_sample_8.cpp  bl_sample_capi.c
blend2d-testing/tests/: bl_test_context_baseapp.cpp  bl_test_context_baseapp.h  bl_test_context_jit.cpp  bl_test_context_mt.cpp  bl_test_context_simple.cpp  bl_test_context_utilities.h  bl_test_image_io.cpp  bl_test_runner.cpp
blend2d/codec/: bmpcodec.cpp  bmpcodec_p.h  codec_test.cpp  jpegcodec.cpp  jpegcodec_p.h  jpeghuffman.cpp  jpeghuffman_p.h  jpegops.cpp  jpegops_p.h  jpegops_sse2.cpp  pngcodec.cpp  pngcodec_p.h  pngops.cpp  pngops_asimd.cpp  pngops_avx.cpp  pngops_p.h  pngops_sse2.cpp  pngopssimdimpl_p.h  pngopssimdimpl_test.cpp  qoicodec.cpp  qoicodec_p.h
blend2d/compression/: checksum.cpp  checksum_asimd.cpp  checksum_asimd_crypto.cpp  checksum_p.h  checksum_sse2.cpp  checksum_sse4_2.cpp  checksum_test.cpp  checksumadler32simdimpl_p.h  checksumcrc32simdimpl_p.h  deflate_test.cpp  deflatedecoder.cpp  deflatedecoder_p.h  deflatedecoderfast.cpp  deflatedecoderfast_avx2.cpp  deflatedecoderfast_p.h  deflatedecoderfastimpl_p.h  deflatedecoderutils.cpp  deflatedecoderutils_p.h  deflatedefs.cpp  deflatedefs_p.h  deflateencoder.cpp  deflateencoder_p.h  deflateencoderutils_p.h  matchfinder_p.h
blend2d/core/: api-build_p.h  api-build_test_p.h  api-globals.cpp  api-impl.h  api-internal_p.h  api-nocxx.cpp  api.h  array.cpp  array.h  array_p.h  array_test.cpp  bitarray.cpp  bitarray.h  bitarray_p.h  bitarray_test.cpp  bitset.cpp  bitset.h  bitset_p.h  bitset_test.cpp  compop_p.h  compopinfo.cpp  compopinfo_p.h  compopsimplifyimpl_p.h  context.cpp  context.h  context_p.h  context_test.cpp  filesystem.cpp  filesystem.h  filesystem_p.h  font.cpp  font.h  font_p.h  font_test.cpp  fontdata.cpp  fontdata.h  fontdata_p.h  fontdefs.h  fontface.cpp  fontface.h  (+93 more)
blend2d/geometry/: bezier_p.h  bezier_test.cpp  commons_p.h  sizetable.cpp  sizetable_p.h  tolerance_p.h
blend2d/opentype/: otcff.cpp  otcff_p.h  otcff_test.cpp  otcmap.cpp  otcmap_p.h  otcore.cpp  otcore_p.h  otdefs_p.h  otface.cpp  otface_p.h  otglyf.cpp  otglyf_asimd.cpp  otglyf_avx2.cpp  otglyf_p.h  otglyf_sse4_2.cpp  otglyfsimddata.cpp  otglyfsimddata_p.h  otglyfsimdimpl_p.h  otkern.cpp  otkern_p.h  otlayout.cpp  otlayout_p.h  otlayoutcontext_p.h  otlayouttables_p.h  otmetrics.cpp  otmetrics_p.h  otname.cpp  otname_p.h  otplatform_p.h
blend2d/pipeline/: pipedefs.cpp  pipedefs_p.h  piperuntime.cpp  piperuntime_p.h
blend2d/pixelops/: funcs.cpp  funcs_p.h  interpolation.cpp  interpolation_avx2.cpp  interpolation_sse2.cpp  scalar_p.h  scalar_test.cpp
blend2d/raster/: analyticrasterizer_p.h  analyticrasterizer_test.cpp  debugging_p.h  edgebuilder_p.h  edgestorage_p.h  rastercontext.cpp  rastercontext_p.h  rastercontextops.cpp  rastercontextops_p.h  rasterdefs_p.h  renderbatch_p.h  rendercommand_p.h  rendercommandprocasync_p.h  rendercommandprocsync_p.h  renderfetchdata.cpp  renderfetchdata_p.h  renderjob_p.h  renderjobproc_p.h  renderqueue_p.h  rendertargetinfo.cpp  rendertargetinfo_p.h  statedata_p.h  styledata_p.h  workdata.cpp  workdata_p.h  workermanager.cpp  workermanager_p.h  workerproc.cpp  workerproc_p.h  workersynchronization.cpp  workersynchronization_p.h
blend2d/simd/: simd_p.h  simd_test.cpp  simd_test_p.h  simdarm_p.h  simdarm_test_asimd.cpp  simdbase_p.h  simdx86_p.h  simdx86_test_avx.cpp  simdx86_test_avx2.cpp  simdx86_test_avx512.cpp  simdx86_test_sse2.cpp  simdx86_test_sse4_1.cpp  simdx86_test_sse4_2.cpp  simdx86_test_ssse3.cpp
blend2d/support/: algorithm_p.h  algorithm_test.cpp  arenaallocator.cpp  arenaallocator_p.h  arenabitarray_p.h  arenabitarray_test.cpp  arenahashmap.cpp  arenahashmap_p.h  math.cpp  (+31 more)
src/: blend2d-debug.h  blend2d-defines.in.h  blend2d-impl.h  blend2d.h  blend2d.natvis
test/: bl_generator.cpp  bl_generator.h  bl_playground.cpp  bl_sample_1.cpp  bl_sample_2.cpp  bl_sample_3.cpp  bl_sample_4.cpp  bl_sample_5.cpp  bl_sample_6.cpp  bl_sample_7.cpp  bl_sample_8.cpp  bl_sample_capi.c  bl_test_c_api.c  bl_test_cmdline.h  bl_test_context_baseapp.cpp  bl_test_context_baseapp.h  bl_test_context_jit.cpp  bl_test_context_mt.cpp  bl_test_context_simple.cpp  bl_test_context_utilities.h  bl_test_fuzzer.cpp  bl_test_image_io.cpp  bl_test_imageutils.h  bl_test_performance_timer.h  bl_test_unit.cpp  bl_test_utilities.h  bl_test_verify_mt.cpp  broken.cpp  broken.h
tools/: blend2d-version.py  configure-makefiles.sh  configure-ninja.sh  configure-sanitizers.sh  configure-vs-x64.bat  configure-vs-x86.bat  configure-vs2017-x64.bat  configure-vs2017-x86.bat  configure-vs2019-x64.bat  configure-vs2019-x86.bat  configure-vs2022-x64.bat  configure-vs2022-x86.bat  configure-xcode.sh
(+827 files in other folders)
